cloudFormation/aws/8080_port_open/input.json
{
	"document": [  
		{
			"Resources": {
				"InstanceSecurityGroup": {
					"Properties": {
						"GroupDescription": "Allow http 8080 to client host",
						"GroupName": "negative1.yaml",
						"SecurityGroupIngress": [
							{
								"CidrIp": "192.168.0.0/16",
								"FromPort": 8080,
								"IpProtocol": "tcp",
								"ToPort": 8080
							}
						],
						"VpcId": {
							"Ref": "myVPC"
						}
					},
					"Type": "AWS::EC2::SecurityGroup"
				}
			},
			"id": "1bd4feed-bcae-4ec4-ba86-6e3a8a90c333",
			"file": "C:/Chandra/kics/assets/queries/cloudFormation/aws/8080_port_open/test/negative1.yaml"
		},
		{
			"id": "255a30a7-7096-4ad6-bcb4-e5227877044a",
			"document": [
				{
					"Resources": {
						"InstanceSecurityGroup": {
							"Properties": {
								"GroupDescription": "Allow http 8080 to client host",
								"SecurityGroupIngress": [
									{
										"CidrIp": "192.168.0.0/16",
										"FromPort": 8080,
										"IpProtocol": "tcp",
										"ToPort": 8080
									}
								],
								"VpcId": {
									"Ref": "myVPC"
								}
							},
							"Type": "AWS::EC2::SecurityGroup"
						}
					},
					"file": "C:/Chandra/kics/assets/queries/cloudFormation/aws/8080_port_open/test/negative1.yaml",
					"id": "110cefef-334e-4c30-bf0b-567a3ebc1845"
				},
				{
					"Resources": {
						"InstanceSecurityGroup": {
							"Properties": {
								"GroupDescription": "Allow http 8080 to client host",
								"SecurityGroupIngress": [
									{
										"CidrIp": "192.168.0.0/16",
										"FromPort": 8080,
										"IpProtocol": "tcp",
										"ToPort": 8080
									}
								],
								"VpcId": {
									"Ref": "myVPC"
								}
							},
							"Type": "AWS::EC2::SecurityGroup"
						}
					},
					"file": "C:/Chandra/kics/assets/queries/cloudFormation/aws/8080_port_open/test/negative2.json",
					"id": "53d9cc5e-913a-480f-9b93-7adb2bb4c9e4"
				},
				{
					"Resources": {
						"InstanceSecurityGroup": {
							"Properties": {
								"GroupDescription": "Allow http 8080 to client host",
								"SecurityGroupIngress": [
									{
										"CidrIp": "0.0.0.0/0",
										"FromPort": 8080,
										"IpProtocol": "tcp",
										"ToPort": 8080
									}
								],
								"VpcId": {
									"Ref": "myVPC"
								}
							},
							"Type": "AWS::EC2::SecurityGroup"
						}
					},
					"file": "C:/Chandra/kics/assets/queries/cloudFormation/aws/8080_port_open/test/positive1.yaml",
					"id": "8f278af8-10be-418e-93e1-4a1da5c5af73"
				},
				{
					"Resources": {
						"InstanceSecurityGroup": {
							"Properties": {
								"GroupDescription": "Allow http 8080 to client host",
								"SecurityGroupIngress": [
									{
										"CidrIp": "0.0.0.0/0",
										"FromPort": 8080,
										"IpProtocol": "tcp",
										"ToPort": 8080
									}
								],
								"VpcId": {
									"Ref": "myVPC"
								}
							},
							"Type": "AWS::EC2::SecurityGroup"
						}
					},
					"file": "C:/Chandra/kics/assets/queries/cloudFormation/aws/8080_port_open/test/positive2.json",
					"id": "260d84d6-4f68-4bc4-89cc-e9ffa211a9bb"
				}
			],
			"file": "C:/Chandra/kics/assets/queries/cloudFormation/aws/8080_port_open/test/input-bak.json"
		},
		{
			"id": "02e4edc4-2084-4df0-9948-d4b0ada94520",
			"file": "C:/Chandra/kics/assets/queries/cloudFormation/aws/8080_port_open/test/positive1.yaml",
			"Resources": {
				"InstanceSecurityGroup": {
					"Properties": {
						"GroupDescription": "Allow http 8080 to client host",
						"GroupName": "positive1.yaml",
						"SecurityGroupIngress": [
							{
								"CidrIp": "0.0.0.0/0",
								"FromPort": 8080,
								"IpProtocol": "tcp",
								"ToPort": 8080
							}
						],
						"VpcId": {
							"Ref": "myVPC"
						}
					},
					"Type": "AWS::EC2::SecurityGroup"
				}
			}
		},
		{
			"Resources": {
				"InstanceSecurityGroup": {
					"Properties": {
						"GroupDescription": "Allow http 8080 to client host",
						"GroupName": "negative2.json",
						"SecurityGroupIngress": [
							{
								"CidrIp": "192.168.0.0/16",
								"FromPort": 8080,
								"IpProtocol": "tcp",
								"ToPort": 8080
							}
						],
						"VpcId": {
							"Ref": "myVPC"
						}
					},
					"Type": "AWS::EC2::SecurityGroup"
				}
			},
			"id": "8284c59c-d8e7-4c08-8bf5-814ceea1575e",
			"file": "C:/Chandra/kics/assets/queries/cloudFormation/aws/8080_port_open/test/negative2.json"
		},
		{
			"Resources": {
				"InstanceSecurityGroup": {
					"Properties": {
						"GroupDescription": "Allow http 8080 to client host",
						"GroupName": "positive2.json",
						"SecurityGroupIngress": [
							{
								"CidrIp": "0.0.0.0/0",
								"FromPort": 8080,
								"IpProtocol": "tcp",
								"ToPort": 8080
							}
						],
						"VpcId": {
							"Ref": "myVPC"
						}
					},
					"Type": "AWS::EC2::SecurityGroup"
				}
			},
			"id": "c2f49d31-a5e3-47e4-a1e3-725acd5883cb",
			"file": "C:/Chandra/kics/assets/queries/cloudFormation/aws/8080_port_open/test/positive2.json"
		}
	]
}
